--- a/neural_net.ipynb
+++ b/neural_net.ipynb
@@ -83,6 +83,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, [None, 784])\n",
+    "W = tf.Variable(tf.zeros([784, 10]))\n",
+    "b = tf.Variable(tf.zeros([10]))\n",
+    "y_ = tf.placeholder(tf.float32, [None, 10])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
