--- a/character_vision.ipynb
+++ b/character_vision.ipynb
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('train.csv')"
+    "df = pd.read_csv('data/train.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -67,10 +67,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6a70a33c10>"
+       "<matplotlib.image.AxesImage at 0x7f69b60135d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -78,7 +78,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD7CAYAAABKWyniAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADcNJREFUeJzt3V2MXPV5x/HfzzYgxZYwivCusMHUVE1FJbBSEqlyhcYK\ndVCxZJQLJ6UXOC0vEsG1mpsSA9p1xUXcC0tGCCFhHAwONC5SMBGiEGONIgRxUBIXkzi4En7Brb1Q\nRBEWyDLs04s5Nuvt7n/GO6/4+X6kkc+e55w5zx7vb87bnBlHhADkMqvfDQDoPYIPJETwgYQIPpAQ\nwQcSIvhAQj0Lvu0bbf/B9gHb/9Sr5bbK9iHb/2H7t7Z/NQD9PGZ7zPYbE8ZdYvsl22/ZftH2xQPW\n34jto7Z/Uz1u7GN/i2zvtv072/ts/0M1fiDW4RT9ra3G92QduhfX8W3PknRA0jck/bek1yV9JyL+\n0PWFt8j225L+PCI+6HcvkmT7LyWdkPRERFxTjdso6f2I+JfqxfOSiLhngPobkfRRRGzqR08T2R6W\nNBwRe23Pk/RrSaskfVcDsA4L/X1bPViHvdrif13Sf0bE4Yg4Jelf1fglB4k1QIc+EfGKpMkvQqsk\nbauGt0m6uadNTTBNf1JjPfZdRByPiL3V8AlJ+yUt0oCsw2n6W1iVu74Oe/WHvlDSOxN+PqrPf8lB\nEZJ+bvt127f3u5lpLIiIManxhyNpQZ/7mcrdtvfa3tLPQ5GJbF8paamkX0oaGrR1OKG/PdWorq/D\ngdnCDYBlEfFVSX8t6XvVruygG7T3Wz8saUlELJV0XNIg7PLPk/SMpHXVlnXyOuvrOpyiv56sw14F\n/78kXTHh50XVuIEREceqf9+T9FM1Dk8GzZjtIenMMeK7fe7nLBHxXnx+0uhRSV/rZz+256gRqicj\nYmc1emDW4VT99Wod9ir4r0v6Y9uLbV8o6TuSnuvRspuy/aXqlVe250paIenN/nYlqXGsN/F47zlJ\na6rhWyXtnDxDj53VXxWk076l/q/DrZJ+HxGbJ4wbpHX4//rr1TrsyVl9qXE5T9JmNV5sHouIH/Zk\nwS2w/UdqbOVD0hxJP+53f7afklST9GVJY5JGJD0r6d8kXS7psKTVEfG/A9TfcjWOVcclHZJ05+nj\n6T70t0zSLyTtU+P/NSStl/QrSTvU53VY6O8W9WAd9iz4AAYHJ/eAhAg+kBDBBxIi+EBCbQV/0G+8\nATC1GZ/Vb/XGG9tcNgD6JCKmfN9/O1v8lm+8iYgzj5GRkbN+HrQH/Z2//Q1yb93or6Sd4H8RbrwB\nMAVO7gEJzWlj3pZvvBkdHT0zPH/+/DYW2X21Wq3fLRTR38wNcm9S+/3V63XV6/WWpm3n5N5sSW+p\ncXLvmBrvgf6biNg/abqY6TIAzJxtxTQn92a8xY+Iz2zfLeklfX7jzf4mswEYAF2/SYctPtAfpS0+\nJ/eAhAg+kBDBBxIi+EBCBB9IiOADCRF8ICGCDyRE8IGECD6QEMEHEiL4QEIEH0iI4AMJEXwgIYIP\nJETwgYQIPpAQwQcSIvhAQgQfSIjgAwkRfCAhgg8kRPCBhAg+kBDBBxIi+EBCBB9IiOADCRF8IKE5\n7cxs+5CkDyWNSzoVEV/vRFMAuqut4KsR+FpEfNCJZgD0Rru7+u7AcwDosXZDG5J+bvt127d3oiEA\n3dfurv6yiDhm+1I1XgD2R8QrkycaHR09M1yr1VSr1dpcLIDJ6vW66vV6S9M6IjqyUNsjkj6KiE2T\nxkenlgGgdbYVEZ6qNuNdfdtfsj2vGp4raYWkN2f6fAB6p51d/SFJP7Ud1fP8OCJe6kxbALqpY7v6\n0y6AXX0kNj4+Xqw3y8asWeWdcnvKPfkztY7v6gP44iL4QEIEH0iI4AMJEXwgIYIPJETwgYTafa8+\n8IU2NjZWrL/44ovF+oEDB4r1l19+uVjfs2dPsX7XXXcV6w899FCxPh22+EBCBB9IiOADCRF8ICGC\nDyRE8IGECD6QENfx0VWffPJJsf7GG2+09fzHjh0r1rdv316sP/vss8V6s/vpu+3999/vyvOyxQcS\nIvhAQgQfSIjgAwkRfCAhgg8kRPCBhLiOj7Z8+umnxfrq1auL9eeff76T7fTcnDnlCA0PDxfrze6n\nX7ly5Tn31Aq2+EBCBB9IiOADCRF8ICGCDyRE8IGECD6QUNPr+LYfk7RS0lhEXFONu0TSTyQtlnRI\n0uqI+LCLfWKGdu/eXay/8MILxfr1119frK9YsaJYf+edd4r1brv22muL9SuuuKJYX7t2bbG+ZMmS\ntur90soW/0eSvjlp3D2SdkXEVyTtlvSDTjcGoHuaBj8iXpH0waTRqyRtq4a3Sbq5w30B6KKZHuMv\niIgxSYqI45IWdK4lAN3WqffqR6k4Ojp6ZrhWq6lWq3VosQBOq9frqtfrLU070+CP2R6KiDHbw5Le\nLU08MfgAumPyRnXDhg3TTtvqrr6rx2nPSVpTDd8qaee5NAigv5oG3/ZTkl6V9Ce2j9j+rqQfSvor\n229J+kb1M4AvCEcUD8/bX4Ad3V7G+ezIkSPF+saNG4v1rVu3FusnT54s1oeGhor1gwcPFuu2i/Wj\nR48W6+26/PLLi/ULL7ywq8vvJ9uKiCn/A3jnHpAQwQcSIvhAQgQfSIjgAwkRfCAhgg8kxOfqd1mz\n72+///77i/Wnn366WG/2/fPNzJ07t1hv9j6Biy66qFhvdh3/qquuKtbRHWzxgYQIPpAQwQcSIvhA\nQgQfSIjgAwkRfCAh7sdv06lTp4r1m266qVjftWtXJ9s5Z5s3by7W77jjjmK92XV89A/34wM4C8EH\nEiL4QEIEH0iI4AMJEXwgIYIPJMR1/Da99tprxfqyZct61El3rFmzplh/4IEHivXLLrusg93gXHAd\nH8BZCD6QEMEHEiL4QEIEH0iI4AMJEXwgoabX8W0/JmmlpLGIuKYaNyLpdknvVpOtj4h/n2b+8/o6\nfrPPtb/uuuuK9cOHDxfrH3/88Tn31Evz588v1rds2VKsr1q1qlifPXv2OfeEhnav4/9I0jenGL8p\nIr5aPaYMPYDB1DT4EfGKpA+mKJW/IgXAwGrnGP9u23ttb7F9ccc6AtB1M/3uvIcl/XNEhO0HJG2S\n9PfTTTw6OnpmuFarqVarzXCxAKZTr9dVr9dbmralm3RsL5b0s9Mn91qtVXVO7hVwco+Te93SiZt0\nrAnH9LaHJ9S+JenNmbcHoNea7urbfkpSTdKXbR+RNCJpue2lksYlHZJ0Zxd7BNBh3I/fpnvvvbdY\nX7JkSbG+fPnyYv348ePn3NNEDz74YLG+Y8eOtp6/XQcPHizWFy9e3KNOzj/cjw/gLAQfSIjgAwkR\nfCAhgg8kRPCBhAg+kBDX8dtkl29SbFZfu3ZtsX7fffcV65deemmxPj4+Xqzfdtttxfrjjz9erLeL\n6/jdw3V8AGch+EBCBB9IiOADCRF8ICGCDyRE8IGEuI7fpoULFxbrx44da+v5L7jggrbqzZw8ebJY\n/+yzz9p6/ma4jt89XMcHcBaCDyRE8IGECD6QEMEHEiL4QEIEH0hopt+dh8rbb79drK9fv75Yf+SR\nR4r1Zl/RderUqWK92+bNm1es79q1q1gfGhrqZDtoEVt8ICGCDyRE8IGECD6QEMEHEiL4QEIEH0io\n6f34thdJekLSkKRxSY9GxIO2L5H0E0mLJR2StDoiPpxi/vP6fvx2vfrqq8X69u3bi/Vm7wNYt25d\nsd7sOvzVV19drN9www3FerPP/Uf3tHs//qeSvh8RfybpLyR9z/afSrpH0q6I+Iqk3ZJ+0KmGAXRX\n0+BHxPGI2FsNn5C0X9IiSaskbasm2ybp5m41CaCzzukY3/aVkpZK+qWkoYgYkxovDpIWdLo5AN3R\n8nv1bc+T9IykdRFxwvbkA/dpD+RHR0fPDNdqNdVqtXPrEkBT9Xpd9Xq9pWlbCr7tOWqE/smI2FmN\nHrM9FBFjtoclvTvd/BODD6A7Jm9UN2zYMO20re7qb5X0+4jYPGHcc5LWVMO3Sto5eSYAg6npFt/2\nMkl/K2mf7d+qsUu/XtJGSTts/52kw5JWd7NRAJ3D5+oPuGbrbnx8vFifNau8U2dPeZkX5wE+Vx/A\nWQg+kBDBBxIi+EBCBB9IiOADCRF8ICE+V3/ANbvOPnv27B51gvMJW3wgIYIPJETwgYQIPpAQwQcS\nIvhAQgQfSIjgAwkRfCAhgg8kRPCBhAg+kBDBBxIi+EBCBB9IiOADCRF8ICGCDyRE8IGECD6QEMEH\nEiL4QEJNg297ke3dtn9ne5/ttdX4EdtHbf+metzY/XYBdIKbff+67WFJwxGx1/Y8Sb+WtErStyV9\nFBGbmswfzZYBoPNsKyKm/GKGpl+oERHHJR2vhk/Y3i9p4enn7liXAHrmnI7xbV8paamkPdWou23v\ntb3F9sUd7g1Al7Qc/Go3/xlJ6yLihKSHJS2JiKVq7BEUd/kBDI6WvjvP9hw1Qv9kROyUpIh4b8Ik\nj0r62XTzj46Onhmu1Wqq1WozaBVASb1eV71eb2napif3JMn2E5L+JyK+P2HccHX8L9v/KOlrEXHL\nFPNycg/og9LJvVbO6i+T9AtJ+yRF9Vgv6RY1jvfHJR2SdGdEjE0xP8EH+qCt4Hdg4QQf6INS8Hnn\nHpAQwQcSIvhAQgQfSIjgAwkRfCAhgg8kRPCBhAg+kBDBBxIi+EBCBB9IqOfBb/V+4X6hv/YMcn+D\n3JvU2/4I/iT0155B7m+Qe5PO8+AD6D+CDyTUkw/i6OoCAEyrb5/AA2DwsKsPJETwgYQIPpAQwQcS\nIvhAQv8HNCXpZgIqNMgAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6aac058c50>"
+       "<matplotlib.figure.Figure at 0x7f69b627ca10>"
       ]
      },
      "metadata": {},
