--- a/neural_net_no_logs.ipynb
+++ b/neural_net_no_logs.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('train.csv')\n",
+    "df = pd.read_csv('data/train.csv')\n",
     "images = df[df.columns[1:]]\n",
     "given_label = df['label']\n",
     "\n",
